@@ -7,6 +7,9 @@ debhelper (11.3.6) UNRELEASED; urgency=medium
     This should not make any pratical difference but aligns the
     behaviour of native and cross builds.  Thanks to Simon McVittie
     for the suggestion.  (Closes: #903042)
+  * autoconf.pm: Leave --libexecdir at upstream default (/usr/libexec)
+    in compat 12 and later.  (Closes: #859724)
+  * meson.pm: Ditto.
 
  -- Niels Thykier <niels@thykier.net>  Wed, 01 Aug 2018 10:27:22 +0000
 
